Some more boilerplate code.

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -5,7 +5,9 @@
     <title>DAB 16/17 Single Page Application - Boilerplate</title>
 </head>
 <body>
-
+    <header></header>
+    <main></main>
+    <footer></footer>
     <!-- inject:js -->
     <!-- endinject -->
 </body>
