Extended the example.

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>DAB 16/17 Single Page Application - Boilerplate</title>
+
+    <script type="application/javascript" src="js/ext.js"></script>
+
 </head>
 <body>
     <header></header>
     <main></main>
     <footer></footer>
-    <!-- inject:js -->
+
+    <!-- inject:mustache -->
     <!-- endinject -->
+
+    <!-- assets:js -->
+    <!-- endinject -->
+
+    <!-- app:js -->
+    <!-- endinject -->
+
 </body>
 </html>
