Fixed a couple of smaller bugs, completed example and added another example view.

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -5,11 +5,12 @@
     <title>DAB 16/17 Single Page Application - Boilerplate</title>
 
     <script type="application/javascript" src="js/ext.js"></script>
-
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+
+    </main>
     <footer></footer>
 
     <!-- inject:mustache -->
